--- a/bower.json
+++ b/bower.json
@@ -9,8 +9,8 @@
     "libs"
   ],
   "dependencies": {
-    "bem-core": "v2.3.0",
-    "bem-components": "git://github.com/bem/bem-components.git#4685e5aa5383dc3a5612b648c679cb004ca67df0",
-    "constructor-blocks": "https://github.com/kompolom/constructor-blocks.git#v0.3.2"
+    "bem-core": "https://github.com/bem/bem-core.git#v2.4.0",
+    "bem-components": "git://github.com/bem/bem-components.git#5f5dfed521e6ca2c795c8feb4df864a97ed816bd",
+    "constructor-blocks": "https://github.com/kompolom/constructor-blocks.git#v0.3.3"
   }
 }
