--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "author": "Evgeniy Baranov",
-  "name": "ilocks",
+  "name": "",
   "email": "master@kompolom.ru",
-  "version": "0.0.0",
+  "version": "0.1.0",
   "engines": {
     "node": ">=0.10"
   },
